cmake_minimum_required(VERSION 4.1)
project(CNG140 C)

set(CMAKE_C_STANDARD 99)

add_executable(CNG140 main.c)
add_executable(new_target 2ex.c)
add_executable(ex3 ex3.c)
add_executable(chg challange.c)
add_executable(bc Bn2ch.c)
add_executable(q11 q1-1.c)
add_executable(q12 q1-2.c)
add_executable(q13 q1-3.c)
